--- a/frontend/templates/app/base.html
+++ b/frontend/templates/app/base.html
@@ -455,7 +455,7 @@
     let ws = new WebSocket(wsURLMon);
     const notificationModal = new bootstrap.Modal(document.getElementById('notificationModal'));
 
-    async function connectWebSocket() {
+    function connectWebSocket() {
 
       ws.onopen = () => {
         console.log("WebSocket connected");
@@ -492,12 +492,13 @@
 
       };
 
-      ws.onmessage = async (event) => {
+      ws.onmessage = (event) => {
         try {
           const data = JSON.parse(event.data);
           console.info(data);
 
           if (data.usr_id === curUsrID){
+
             if (data.msg && data.from) {
               const chatWin = document.getElementById(`chat-${data.url}`);
               if(data.final_output){
@@ -513,82 +514,11 @@
                 if (chatWin) appendMessage(chatWin, data.from, data.msg);
               } 
             } 
-
-            if (data.alert_type){
-              switch (data.alert_type){
-                case "exec_result":
-                  if (data.task_type === "trcrt_dns" || data.task_type === "trcrt"){
-                    const spinner = document.getElementById('netvis-trace-run-spinner');
-                    const buttonText = document.getElementById('netvis-trace-run-txt');
-                    const netvisTraceButton = document.getElementById('netvis-trace-run-btn');
-
-                    await visualizeTraceroute(data.task_output);
-
-                    spinner.classList.remove('d-inline-block');
-                    spinner.classList.add('d-none');
-                    buttonText.textContent = "Run Trace";
-
-                    netvisTraceButton.disabled = false;
-
-                    addNotification(data);
-                  }
-
-                  if (typeof action === "string" && action.startsWith("test_")){
-                    const spinner = document.getElementById('netvis-perf-run-spinner');
-                    const buttonText = document.getElementById('netvis-perf-run-txt');
-                    const netvisPerfButton = document.getElementById('netvis-perf-run-btn');
-
-                    await visualizePerformanceTest(data.task_output);
-
-                    spinner.classList.remove('d-inline-block');
-                    spinner.classList.add('d-none');
-                    buttonText.textContent = "Run Performance Test";
-
-                    netvisPerfButton.disabled = false;
-
-                    addNotification(data);
-
-                  }
-
-                  if (typeof action === "string" && action.startsWith("pcap_")){
-                    const spinner = document.getElementById('netvis-pcap-run-spinner');
-                    const buttonText = document.getElementById('netvis-pcap-run-txt');
-                    const netvisPcapButton = document.getElementById('netvis-pcap-run-btn');
-
-                    await visualizePacketCapture(data.task_output);
-
-                    spinner.classList.remove('d-inline-block');
-                    spinner.classList.add('d-none');
-                    buttonText.textContent = "Run Packet Capture";
-
-                    netvisPcapButton.disabled = false;
-
-                    addNotification(data);
-                  }
-
-                  if (typeof action === "string" && action.startsWith("scan_")) {
-                    const spinner = document.getElementById('netvis-scan-run-spinner');
-                    const buttonText = document.getElementById('netvis-scan-run-txt');
-                    const netvisScanButton = document.getElementById('netvis-scan-run-btn');
-
-                    await visualizeNetworkScan(data.task_output);
-
-                    spinner.classList.remove('d-inline-block');
-                    spinner.classList.add('d-none');
-                    buttonText.textContent = "Run Scan";
-
-                    netvisScanButton.disabled = false;
-
-                    addNotification(data);
-                  }
-                  break;
-              }
-            }
           }
 
           if (data.alert_type){
             addNotification(data);
-            }
+          }
 
         } catch (err) {
           console.error("Invalid WS data:", err, event.data);
@@ -1408,196 +1338,6 @@
       document.getElementById('notif-modal-text').innerText = `task ${name.dataset.name} deletion initiated. You will receive a notification when the task has been successfully deleted.`;
 
       notificationModal.show();
-    });
-
-    netvisRunScanButton.addEventListener("click", async function() {
-      // Select the spinner element within the button
-      const spinner = this.querySelector('.spinner-grow');
-      // Select the text element within the button
-      const buttonText = this.querySelector('.netvis-scan-run-text');
-
-      // Show the spinner and hide the text
-      spinner.classList.remove('d-none');
-      spinner.classList.add('d-inline-block');
-      buttonText.textContent = "Running...";
-
-      // Disable the button
-      this.disabled = true;
-
-      const netvisScanIfaceSelect = document.getElementById('netvis-scan-ifaces-select');
-      const netvisScanSelect = document.getElementById('netvis-scan-select');
-      const netvisScanFpLimit = document.getElementById('netvis-scan-fplimit-switch');
-      const netvisScanDevidNoise = document.getElementById('netvis-scan-devid-noise-switch');
-      const netvisScanSnmpScripts = document.getElementById('netvis-scan-snmp-scripts');
-      const netvisScanPorts = document.getElementById('netvis-scan-ports');
-      const netvisScanTarget = document.getElementById('netvis-scan-target');
-      const netvisScanOptions = document.getElementById('netvis-scan-options');
-      const probe_id = document.getElementById('netvis-probe-id');
-      const probe_url = document.getElementById('netvis-probe-url');
-      const probe_api_key = document.getElementById('netvis-probe-apikey');
-      const scanType = netvisScanSelect.value;
-      const interface = netvisScanIfaceSelect.value;
-      const fpLimit = netvisScanFpLimit.checked;
-      const devidNoise = netvisScanDevidNoise.checked;
-      const snmpScripts = netvisScanSnmpScripts.value;
-      const ports = netvisScanPorts.value;
-      const target = netvisScanTarget.value;
-      const options = netvisScanOptions.value;
-
-      let param_data = {
-        interface: interface,
-        fp_limit: fpLimit,
-        devid_noise: devidNoise,
-        snmp_scripts: snmpScripts,
-        ports: ports,
-        target: target,
-        options: options  
-      };
-
-      let scan_data = JSON.stringify({
-        act: "prb_task_init",
-        prb_id: probe_id.dataset.pid,
-        oper: "exec",
-        task: scanType,
-        prms: param_data,
-        usr_id: curUsrID
-      });
-
-      ws.send(scan_data);
-    });
-
-    netvisRunPcapButton.addEventListener("click", async function() {
-      const spinner = this.querySelector('.spinner-grow');
-      const buttonText = this.querySelector('.netvis-pcap-run-text');
-
-      // Show the spinner and hide the text
-      spinner.classList.remove('d-none');
-      spinner.classList.add('d-inline-block');
-      buttonText.textContent = "Running...";
-
-      // Disable the button
-      this.disabled = true;
-
-      const netvisPcapIfaceSelect = document.getElementById('netvis-pcap-ifaces-select');
-      const netvisPcapSelect = document.getElementById('netvis-pcap-select');
-      const netvisPcapCountTarget = document.getElementById('netvis-pcap-count-target');
-      const netvisPcapDurationTarget = document.getElementById('netvis-pcap-duration-target');
-      const netvisPcapRemoteHost = document.getElementById('netvis-pcap-remote-host');
-      const netvisPcapRemoteUser = document.getElementById('netvis-pcap-remote-user');
-      const netvisPcapRemotePass = document.getElementById('netvis-pcap-remote-pass');
-      const probe_id = document.getElementById('netvis-probe-id');
-      const probe_url = document.getElementById('netvis-probe-url');
-      const probe_api_key = document.getElementById('netvis-probe-apikey');
-      const captureMode = netvisPcapSelect.value;
-      const interface = netvisPcapIfaceSelect.value;
-      const countTarget = netvisPcapCountTarget.value;
-      const durationTarget = netvisPcapDurationTarget.value;
-      const remoteHost = netvisPcapRemoteHost.value;
-      const remoteUser = netvisPcapRemoteUser.value;
-      const remotePass = netvisPcapRemotePass.value;
-
-      let param_data = {
-        interface: interface,
-        count_target: countTarget,
-        duration_target: durationTarget,
-        remote_host: remoteHost,
-        remote_user: remoteUser,
-        remote_pass: remotePass
-      };
-
-      let pcap_data = JSON.stringify({
-        act: "prb_task_init",
-        prb_id: probe_id.dataset.pid,
-        oper: "exec",
-        task: captureMode,
-        prms: param_data,
-        usr_id: curUsrID
-      });
-
-      ws.send(pcap_data);
-    });
-
-    netvisRunTraceButton.addEventListener("click", async function() {
-      const spinner = this.querySelector('.spinner-grow');
-      const buttonText = this.querySelector('.netvis-trace-run-text');
-
-      // Show the spinner and hide the text
-      spinner.classList.remove('d-none');
-      spinner.classList.add('d-inline-block');
-      buttonText.textContent = "Running...";
-
-      // Disable the button
-      this.disabled = true;
-
-      const netvisTraceSelect = document.getElementById('netvis-trace-select');
-      const netvisTraceTarget = document.getElementById('netvis-trace-target');
-      const netvisTraceDNSServer = document.getElementById('netvis-trace-dns-server');
-      const netvisTraceOptions = document.getElementById('netvis-trace-options');
-      const netvisTracePacketLen = document.getElementById('netvis-trace-packetlen');
-      const probe_id = document.getElementById('netvis-probe-id');
-      const probe_url = document.getElementById('netvis-probe-url');
-      const traceType = netvisTraceSelect.value;
-      const target = netvisTraceTarget.value;
-      const dnsServer = netvisTraceDNSServer.value;
-      const options = netvisTraceOptions.value;
-      const packetLen = netvisTracePacketLen.value; 
-
-      let param_data = {
-        target: target,
-        dns_server: dnsServer,
-        options: options,
-        packet_len: packetLen
-      };
-
-      let trace_data = JSON.stringify({
-        act: "prb_task_init",
-        prb_id: probe_id.dataset.pid,
-        oper: "exec",
-        task: traceType,
-        prms: param_data,
-        usr_id: curUsrID
-      });
-
-      ws.send(trace_data);
-
-    });
-
-    netvisRunPerfButton.addEventListener("click", async function() {
-      const spinner = this.querySelector('.spinner-grow');
-      const buttonText = this.querySelector('.netvis-perf-run-text');
-
-      // Show the spinner and hide the text
-      spinner.classList.remove('d-none');
-      spinner.classList.add('d-inline-block');
-      buttonText.textContent = "Running...";
-
-      // Disable the button
-      this.disabled = true;
-
-      const netvisPerfSelect = document.getElementById('netvis-perf-select');
-      const netvisPerfClientOptions = document.getElementById('netvis-perf-client-options');
-      const netvisPerfOptions = document.getElementById('netvis-perf-options');
-      const probe_id = document.getElementById('netvis-probe-id');
-      const probe_url = document.getElementById('netvis-probe-url');
-      const testType = netvisPerfSelect.value;
-      const clientOptions = netvisPerfClientOptions.value;
-      const options = netvisPerfOptions.value;
-
-      let param_data = {
-        client_options: clientOptions,
-        options: options
-      };
-
-      let perf_data = JSON.stringify({
-        act: "prb_task_init",
-        prb_id: probe_id.dataset.pid,
-        oper: "exec",
-        task: testType,
-        prms: param_data,
-        usr_id: curUsrID
-      })
-      
-      ws.send(perf_data);
     });
 
     chatInput.addEventListener("keypress", e => {
