--- a/frontend/templates/app/settings.html
+++ b/frontend/templates/app/settings.html
@@ -54,8 +54,8 @@
           </div>
           <div class="d-flex align-items-center">
             <div class="input-group mb-3">
-              <a class="dropdown-item btn btn-outline-primary" id="add-api">Generate</a>
-              <a class="dropdown-item btn btn-outline-secondary" id="reset-api">Reset</a>
+              <a class="btn btn-outline-primary" id="add-api">Generate</a>
+              <a class="btn btn-outline-secondary" id="reset-api">Reset</a>
             </div>
           </div>
         </div>
