--- a/frontend/templates/app/settings.html
+++ b/frontend/templates/app/settings.html
@@ -63,6 +63,71 @@
     </div>
 </div>
 
+<div class="container-fluid py-4">
+  <div class="row align-items-stretch">
+    <div class="col-12 mt-4">
+      <div class="card mb-4">
+        <div class="card-header pb-0 p-3">
+          <h6 class="mb-1">Add Primary Alert Email</h6>
+        </div>
+        <div class="card-body p-3">
+          <div class="row" id="email-contacts">
+            {% for alerts in all_alert_types.values() %}
+            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+              <div class="card card-blog card-plain">
+                <div class="position-relative">
+                  <a class="d-block">
+                    <img src="{{ url_for('static', filename='img/bcl/expertise/neteng.jpg') }}" alt="img-blur-shadow"
+                        class="img-fluid shadow border-radius-md"/>
+                  </a>
+                </div>
+                <div class="card-body px-1 pb-0">
+                  <p class="text-secondary mb-0 text-sm" value="{{ alerts.id }}">ID: {{ alerts.count }}</p>
+                  <a >
+                    <h5 class="font-weight-bolder">
+                      {{ alerts.name }}
+                    </h5>
+                  </a>
+                  <p class="mb-4 text-sm">
+                    {{ alerts.type }}
+                  </p>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <button type="button" class="btn btn-outline-primary btn-sm mb-0" id="del-contact">
+                      Delete Contact
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+              <div class="card h-100 card-plain border">
+                <div class="card-body d-flex flex-column justify-content-center text-center">
+                  <a id="add-jira">
+                    <i class="fa fa-plus text-secondary mb-3"></i>
+                    <h5 class=" text-secondary"> Add Jira Contact </h5>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+              <div class="card h-100 card-plain border">
+                <div class="card-body d-flex flex-column justify-content-center text-center">
+                  <a id="add-slack">
+                    <i class="fa fa-plus text-secondary mb-3"></i>
+                    <h5 class=" text-secondary"> Add Slack Contact </h5>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="modal fade" id="apiGenModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
